# visibleone

./: README.md  pyproject.toml  requirements.txt  vending_machine.py
.github/workflows/: ci.yml
DjangoAPI/challenge/: models.py  schema.py  serializers.py  urls.py  views.py
DjangoAPI/challenge/management/commands/: load_challenges.py
DjangoAPI/challenge/migrations/: 0001_initial.py  0002_rename_challengesuccessrate_challenge_challengesucessrate.py
DjangoAPI/core/: schema.py  settings.py  urls.py  views.py
